# fastapi-service

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  config.yaml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: build.yml  test.yml
app/: __init__.py  alembic.ini  api.py  bin.py  containers.py  db.py  main.py  models.py  providers.py  resources.py  services.py  tables.py  tasks.py  worker.py
app/content/: api.py  containers.py  tables.py  tasks.py
app/features/: __init__.py
app/features/admin/: __init__.py
app/features/content/: __init__.py  api.py  containers.py  models.py  tables.py  tasks.py
app/features/twitch/: api.py  containers.py  models.py  tables.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 0001_initial_migration.py
app/resources/: containers.py  providers.py  services.py
configs/: test.yml
migrations/: env.py
migrations/versions/: 0001_initial_migration.py
tests/: conftest.py  test_bot.py  test_channels.py  test_content.py  test_fastapi_service.py  test_redis.py
