[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Morty Space <morty.space@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.3"
fastapi = "^0.72.0"
asyncpg = "^0.25.0"
alembic = "^1.7.5"
uvicorn = "^0.17.0"
greenlet = "^1.1.2"
pg8000 = "^1.23.0"
click = "^8.0.3"
SQLAlchemy = "^1.4.29"
dependency-injector = "^4.37.0"
aioredis = "^2.0.1"
hiredis = "^2.0.0"
celery = {extras = ["redis", "msgpack"], version = "^5.2.3"}
orjson = "^3.6.6"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
pytest-asyncio = "^0.17.0"
flake8 = "^4.0.1"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"
black = "^21.12b0"
httpx = "^0.21.3"
celery-types = "^0.12.0"
asyncpg-stubs = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "app.bin:migrate"
makemigration = "app.bin:makemigration"
recreatemigrations = "app.bin:recreatemigrations"
server = "app.bin:server"
test = "app.bin:test"
worker = "app.bin:worker"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \build
  | \dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
